# Aurora-Swarm

./: .gitignore  BATCH_PROMPTING.md  README.md  cptotmp.c  env.sh  pyproject.toml  run_scatter_gather_example.sh  test_batch_integration.py
.github/workflows/: deploy-docs.yml  mirror.yml
aurora_swarm/: __init__.py  aggregators.py  cli.py  embedding_pool.py  hostfile.py  pool.py  proxy.py  vllm_pool.py
aurora_swarm/patterns/: __init__.py  blackboard.py  broadcast.py  embedding.py  pipeline.py  scatter_gather.py  tree_reduce.py
aurora_swarm/uq/: __init__.py  kle.py  probes.py  semantic_entropy.py
docs/: Makefile  aggregators.rst  api.rst  batch_prompting.rst  conf.py  context_length.rst  index.rst  proxy_design.md  proxy_usage.md
docs/_build/: .buildinfo  api.html  genindex.html  (+6 more)
examples/: broadcast_aggregators.py  broadcast_aggregators.sh  context_length_demo.py  lab3_semantic_uncertainty.py  lab3_semantic_uncertainty.sh  lab3_train_probe.py  scatter_gather_coli.py  scatter_gather_coli.sh  test_embeddings_sg.py  test_embeddings_sg.sh  tree_reduce_example.py  tree_reduce_example.sh
extra/: BATCH_PROMPTING_QUICKREF.md  CONTEXT_LENGTH.md  IMPLEMENTATION_SUMMARY.md
scripts/: README.txt  calculate_time_diff.pl  compute_stats.pl  compute_stats_tab.pl  parse_start.pl  start_oss120b.sh  submit_oss120b.sh  wait_for_vllm_servers.py
tests/: conftest.py  test_blackboard.py  test_broadcast.py  test_embedding_pool.py  test_pipeline.py  test_pool_proxy.py  test_proxy.py  test_scatter_gather.py  test_tree_reduce.py  test_uq.py  test_vllm_pool.py  test_vllm_pool_config.py
(+22 files in other folders)
